[package]
name = "rustwebserver"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["macros"] }
serde_json = { version = "1", features = ["raw_value"] }
vercel_runtime = { version = "1.1.0" }
[[bin]]
name = "handler"
path = "api/handler.rs"
